# ffi_testing

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  cppbindgen.toml  expanded.rs  justfile
bindings/c/: CMakeLists.txt  MANIFEST.MF  Main.java  ffi_lib.h  ffi_lib.h.gch  ffi_lib.hpp  ffi_lib.i  ffi_lib_wrap.c  main.c  main.cpp
bindings/c/src/com/example/: Main.java  SWIGTYPE_p_int32_t.java  SWIGTYPE_p_int8_t.java  SWIGTYPE_p_p_simpleservice.java  SWIGTYPE_p_p_vec4.java  SWIGTYPE_p_simpleservice.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_vec4.java  SimpleService.java  Vec4.java  ffi_lib.java  ffi_libJNI.java  ffierror.java  vec2.java  vec3.java
bindings/c_v2/: ffi_lib.h
bindings/csharp/: Interop.cs
bindings/python/: ffi_lib.py  main.py
examples/C-example/: c_vec3.c  c_vec3.h  ffi_lib.c  ffi_lib.h
examples/CPP-example/: ffi_lib.h  main.cpp
examples/ffi_example/src/: Main.java
examples/ffi_example/src/fuck/: HelloWorld.java  Vec3.java  Vec3Jni.java  Vec3JniV2.java
ffi-proc-macro/: Cargo.toml
ffi-proc-macro/src/: lib.rs
node_test/: index.js  package.json
src/: c_ffi.rs  interop.rs  lib.rs  main.rs  results.rs  threads_example.rs  wasm.rs
src/hello_jni/: mod.rs
tests/: bindings.rs
