[workspace]
members = [".", "ffi"]
resolver = "2"

[package]
name = "ffi_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ffi = { path = "ffi", optional = true}
robusta_jni = { version = "0.2", optional = true }
pyo3 = { version = "0.21", features = ["extension-module", "multiple-pymethods"], optional = true }
pyo3-helper-macros ={ version = "*", optional = true }
interoptopus = { version = "*", optional = false, features = ["log"]}
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.38.0", features = ["full"] }
aes = "0.8"
cipher = "0.4"

[features]
default = ["c-ffi", "interoptopus"]
jni = ["dep:robusta_jni"]
c-ffi = ["dep:ffi"]
pyo3 = ["dep:pyo3", "dep:pyo3-helper-macros"]
interoptopus = []

[dev-dependencies]
interoptopus_backend_csharp = { version = "*"}
interoptopus_backend_c = { version = "*"}
interoptopus_backend_cpython = { version = "*"}
